@@ -25,6 +25,9 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
       well).
     - patches.xorg/1.20.5: likewise add missing modeline2c.awk file. Actually
       needed for Fedora 30.
+    - patches.xorg/1.19.2/xorg-server-configure-ac.patch: backport
+      XORG_VERSION_CURRENT change from
+      e0dbca73f11e9aa7a066e748e6d08ba256be69cf / 1.20.5.
   * debian/control:
     + Grammar fix.
     + Remove dependencies that refer to disabled features.
